Fix post title alignment

--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body {
 
   .title_post {
     color: #fff;
+    margin-left: 30px;
   }
 
   h1 {
